fix: modify cloud margin and alignment

--- a/css/character_selection.css
+++ b/css/character_selection.css
@@ -35,9 +35,11 @@ body {
     left: 0;
 }
 
-.top {
+.top-container {
     display: flex;
-    align-items: center;
+    flex-direction: row;
+    justify-content: space-evenly;
+    margin: -50px 0px -150px;
 }
 
 img.clouds {
